tests/baselines/reference/typeofClassWithPrivates.errors.txt
typeofClassWithPrivates.ts(2,13): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
typeofClassWithPrivates.ts(4,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
typeofClassWithPrivates.ts(5,15): error TS2302: Static members cannot reference class type parameters.


==== typeofClassWithPrivates.ts (3 errors) ====
    class C<T> {
        private a: number;
                ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
        private static b: number;
        x: T;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        static y: T;
                  ~
!!! error TS2302: Static members cannot reference class type parameters.
    }
    
    var c: C<string>;
    var r: typeof C;
    var r2: typeof c;